src/main/java/analizador_sintactico/archivos/y.output
   0  $accept : programa $end

   1  programa : bloque_sentencias

   2  tipo_id : UINT
   3          | DOUBLE

   4  bloque_sentencias : tipo_sentencia fin_sentencia
   5                    | tipo_sentencia fin_sentencia bloque_sentencias

   6  tipo_sentencia : sentencia_decl
   7                 | sentencia_ejec

   8  fin_sentencia :
   9                | ';'

  10  sentencia_decl : nombre_proc params_proc ni_proc cuerpo_proc
  11                 | tipo_id lista_variables

  12  nombre_proc : PROC ID
  13              | PROC

  14  params_proc : '(' lista_params_decl ')'
  15              | '(' ')'
  16              | '(' lista_params_decl
  17              | '('

  18  lista_params_decl : param
  19                    | param separador_variables param
  20                    | param separador_variables param separador_variables param
  21                    | param separador_variables param separador_variables param separador_variables lista_params_decl

  22  separador_variables :
  23                      | ','

  24  param : param_var
  25        | param_comun

  26  param_var : VAR tipo_id ID
  27            | VAR ID
  28            | VAR tipo_id

  29  param_comun : tipo_id ID
  30              | tipo_id

  31  ni_proc : NI '=' CTE_UINT
  32          | NI '='
  33          | '=' CTE_UINT
  34          | NI CTE_UINT
  35          | error

  36  cuerpo_proc : '{' bloque_sentencias '}'
  37              | '{' '}'

  38  lista_variables : ID
  39                  | ID ',' lista_variables

  40  sentencia_ejec : invocacion
  41                 | asignacion
  42                 | loop
  43                 | if
  44                 | print

  45  invocacion : ID '(' ')'
  46             | ID '(' lista_params_inv ')'

  47  lista_params_inv : ID
  48                   | ID separador_variables ID
  49                   | ID separador_variables ID separador_variables ID
  50                   | ID separador_variables ID separador_variables ID separador_variables lista_params_inv

  51  asignacion : ID '=' expresion
  52             | ID '=' error

  53  expresion : expresion '+' termino
  54            | expresion '-' termino
  55            | termino

  56  termino : termino '*' factor
  57          | termino '/' factor
  58          | factor

  59  factor : ID
  60         | CTE_UINT
  61         | CTE_DOUBLE
  62         | '-' factor

  63  loop : cuerpo_loop cuerpo_until

  64  cuerpo_loop : LOOP bloque_estruct_ctrl
  65              | LOOP

  66  bloque_estruct_ctrl : sentencia_ejec fin_sentencia
  67                      | '{' bloque_sentencias_ejec '}'
  68                      | '{' '}'

  69  bloque_sentencias_ejec : sentencia_ejec fin_sentencia
  70                         | sentencia_ejec fin_sentencia bloque_sentencias_ejec

  71  cuerpo_until : UNTIL condicion
  72               | UNTIL

  73  condicion : '(' expresion comparador expresion ')'
  74            | '(' expresion comparador expresion
  75            | '(' comparador expresion ')'
  76            | '(' expresion comparador ')'
  77            | '(' error ')'

  78  comparador : COMP_MAYOR_IGUAL
  79             | COMP_MENOR_IGUAL
  80             | '<'
  81             | '>'
  82             | COMP_IGUAL
  83             | COMP_DISTINTO

  84  if : encabezado_if rama_then rama_else END_IF
  85     | encabezado_if rama_then END_IF

  86  encabezado_if : IF condicion
  87                | IF

  88  rama_then : THEN bloque_estruct_ctrl
  89            | THEN

  90  rama_else : ELSE bloque_estruct_ctrl
  91            | ELSE

  92  print : OUT '(' imprimible ')'
  93        | OUT '(' imprimible
  94        | OUT '(' error ')'

  95  imprimible : CADENA
  96             | CTE_UINT
  97             | CTE_DOUBLE
  98             | ID

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	UINT  shift 2
	DOUBLE  shift 3
	IF  shift 4
	LOOP  shift 5
	OUT  shift 6
	PROC  shift 7
	.  error

	programa  goto 8
	bloque_sentencias  goto 9
	tipo_id  goto 10
	tipo_sentencia  goto 11
	sentencia_decl  goto 12
	sentencia_ejec  goto 13
	nombre_proc  goto 14
	invocacion  goto 15
	asignacion  goto 16
	loop  goto 17
	if  goto 18
	print  goto 19
	cuerpo_loop  goto 20
	encabezado_if  goto 21


state 1
	invocacion : ID . '(' ')'  (45)
	invocacion : ID . '(' lista_params_inv ')'  (46)
	asignacion : ID . '=' expresion  (51)
	asignacion : ID . '=' error  (52)

	'('  shift 22
	'='  shift 23
	.  error


state 2
	tipo_id : UINT .  (2)

	.  reduce 2


state 3
	tipo_id : DOUBLE .  (3)

	.  reduce 3


state 4
	encabezado_if : IF . condicion  (86)
	encabezado_if : IF .  (87)

	'('  shift 24
	THEN  reduce 87

	condicion  goto 25


state 5
	cuerpo_loop : LOOP . bloque_estruct_ctrl  (64)
	cuerpo_loop : LOOP .  (65)

	ID  shift 1
	IF  shift 4
	LOOP  shift 5
	OUT  shift 6
	'{'  shift 26
	UNTIL  reduce 65

	sentencia_ejec  goto 27
	invocacion  goto 15
	asignacion  goto 16
	loop  goto 17
	if  goto 18
	print  goto 19
	cuerpo_loop  goto 20
	bloque_estruct_ctrl  goto 28
	encabezado_if  goto 21


state 6
	print : OUT . '(' imprimible ')'  (92)
	print : OUT . '(' imprimible  (93)
	print : OUT . '(' error ')'  (94)

	'('  shift 29
	.  error


state 7
	nombre_proc : PROC . ID  (12)
	nombre_proc : PROC .  (13)

	ID  shift 30
	'('  reduce 13


state 8
	$accept : programa . $end  (0)

	$end  accept


state 9
	programa : bloque_sentencias .  (1)

	.  reduce 1


state 10
	sentencia_decl : tipo_id . lista_variables  (11)

	ID  shift 31
	.  error

	lista_variables  goto 32


state 11
	bloque_sentencias : tipo_sentencia . fin_sentencia  (4)
	bloque_sentencias : tipo_sentencia . fin_sentencia bloque_sentencias  (5)
	fin_sentencia : .  (8)

	';'  shift 33
	$end  reduce 8
	ID  reduce 8
	UINT  reduce 8
	DOUBLE  reduce 8
	IF  reduce 8
	LOOP  reduce 8
	OUT  reduce 8
	PROC  reduce 8
	'}'  reduce 8

	fin_sentencia  goto 34


state 12
	tipo_sentencia : sentencia_decl .  (6)

	.  reduce 6


state 13
	tipo_sentencia : sentencia_ejec .  (7)

	.  reduce 7


state 14
	sentencia_decl : nombre_proc . params_proc ni_proc cuerpo_proc  (10)

	'('  shift 35
	.  error

	params_proc  goto 36


state 15
	sentencia_ejec : invocacion .  (40)

	.  reduce 40


state 16
	sentencia_ejec : asignacion .  (41)

	.  reduce 41


state 17
	sentencia_ejec : loop .  (42)

	.  reduce 42


state 18
	sentencia_ejec : if .  (43)

	.  reduce 43


state 19
	sentencia_ejec : print .  (44)

	.  reduce 44


state 20
	loop : cuerpo_loop . cuerpo_until  (63)

	UNTIL  shift 37
	.  error

	cuerpo_until  goto 38


state 21
	if : encabezado_if . rama_then rama_else END_IF  (84)
	if : encabezado_if . rama_then END_IF  (85)

	THEN  shift 39
	.  error

	rama_then  goto 40


state 22
	invocacion : ID '(' . ')'  (45)
	invocacion : ID '(' . lista_params_inv ')'  (46)

	ID  shift 41
	')'  shift 42
	.  error

	lista_params_inv  goto 43


state 23
	asignacion : ID '=' . expresion  (51)
	asignacion : ID '=' . error  (52)

	error  shift 44
	ID  shift 45
	CTE_UINT  shift 46
	CTE_DOUBLE  shift 47
	'-'  shift 48
	.  error

	expresion  goto 49
	termino  goto 50
	factor  goto 51


state 24
	condicion : '(' . expresion comparador expresion ')'  (73)
	condicion : '(' . expresion comparador expresion  (74)
	condicion : '(' . comparador expresion ')'  (75)
	condicion : '(' . expresion comparador ')'  (76)
	condicion : '(' . error ')'  (77)

	error  shift 52
	ID  shift 45
	COMP_MENOR_IGUAL  shift 53
	COMP_MAYOR_IGUAL  shift 54
	COMP_DISTINTO  shift 55
	COMP_IGUAL  shift 56
	CTE_UINT  shift 46
	CTE_DOUBLE  shift 47
	'-'  shift 48
	'<'  shift 57
	'>'  shift 58
	.  error

	expresion  goto 59
	termino  goto 50
	factor  goto 51
	comparador  goto 60


state 25
	encabezado_if : IF condicion .  (86)

	.  reduce 86


state 26
	bloque_estruct_ctrl : '{' . bloque_sentencias_ejec '}'  (67)
	bloque_estruct_ctrl : '{' . '}'  (68)

	ID  shift 1
	IF  shift 4
	LOOP  shift 5
	OUT  shift 6
	'}'  shift 61
	.  error

	sentencia_ejec  goto 62
	invocacion  goto 15
	asignacion  goto 16
	loop  goto 17
	if  goto 18
	print  goto 19
	cuerpo_loop  goto 20
	bloque_sentencias_ejec  goto 63
	encabezado_if  goto 21


state 27
	bloque_estruct_ctrl : sentencia_ejec . fin_sentencia  (66)
	fin_sentencia : .  (8)

	';'  shift 33
	ELSE  reduce 8
	END_IF  reduce 8
	UNTIL  reduce 8

	fin_sentencia  goto 64


state 28
	cuerpo_loop : LOOP bloque_estruct_ctrl .  (64)

	.  reduce 64


state 29
	print : OUT '(' . imprimible ')'  (92)
	print : OUT '(' . imprimible  (93)
	print : OUT '(' . error ')'  (94)

	error  shift 65
	ID  shift 66
	CADENA  shift 67
	CTE_UINT  shift 68
	CTE_DOUBLE  shift 69
	.  error

	imprimible  goto 70


state 30
	nombre_proc : PROC ID .  (12)

	.  reduce 12


state 31
	lista_variables : ID .  (38)
	lista_variables : ID . ',' lista_variables  (39)

	','  shift 71
	$end  reduce 38
	ID  reduce 38
	UINT  reduce 38
	DOUBLE  reduce 38
	IF  reduce 38
	LOOP  reduce 38
	OUT  reduce 38
	PROC  reduce 38
	';'  reduce 38
	'}'  reduce 38


state 32
	sentencia_decl : tipo_id lista_variables .  (11)

	.  reduce 11


state 33
	fin_sentencia : ';' .  (9)

	.  reduce 9


state 34
	bloque_sentencias : tipo_sentencia fin_sentencia .  (4)
	bloque_sentencias : tipo_sentencia fin_sentencia . bloque_sentencias  (5)

	ID  shift 1
	UINT  shift 2
	DOUBLE  shift 3
	IF  shift 4
	LOOP  shift 5
	OUT  shift 6
	PROC  shift 7
	$end  reduce 4
	'}'  reduce 4

	bloque_sentencias  goto 72
	tipo_id  goto 10
	tipo_sentencia  goto 11
	sentencia_decl  goto 12
	sentencia_ejec  goto 13
	nombre_proc  goto 14
	invocacion  goto 15
	asignacion  goto 16
	loop  goto 17
	if  goto 18
	print  goto 19
	cuerpo_loop  goto 20
	encabezado_if  goto 21


state 35
	params_proc : '(' . lista_params_decl ')'  (14)
	params_proc : '(' . ')'  (15)
	params_proc : '(' . lista_params_decl  (16)
	params_proc : '(' .  (17)

	UINT  shift 2
	DOUBLE  shift 3
	VAR  shift 73
	')'  shift 74
	error  reduce 17
	NI  reduce 17
	'='  reduce 17

	tipo_id  goto 75
	lista_params_decl  goto 76
	param  goto 77
	param_var  goto 78
	param_comun  goto 79


state 36
	sentencia_decl : nombre_proc params_proc . ni_proc cuerpo_proc  (10)

	error  shift 80
	NI  shift 81
	'='  shift 82
	.  error

	ni_proc  goto 83


state 37
	cuerpo_until : UNTIL . condicion  (71)
	cuerpo_until : UNTIL .  (72)

	'('  shift 24
	$end  reduce 72
	ID  reduce 72
	UINT  reduce 72
	DOUBLE  reduce 72
	IF  reduce 72
	ELSE  reduce 72
	END_IF  reduce 72
	LOOP  reduce 72
	UNTIL  reduce 72
	OUT  reduce 72
	PROC  reduce 72
	';'  reduce 72
	'}'  reduce 72

	condicion  goto 84


state 38
	loop : cuerpo_loop cuerpo_until .  (63)

	.  reduce 63


state 39
	rama_then : THEN . bloque_estruct_ctrl  (88)
	rama_then : THEN .  (89)

	ID  shift 1
	IF  shift 4
	LOOP  shift 5
	OUT  shift 6
	'{'  shift 26
	ELSE  reduce 89
	END_IF  reduce 89

	sentencia_ejec  goto 27
	invocacion  goto 15
	asignacion  goto 16
	loop  goto 17
	if  goto 18
	print  goto 19
	cuerpo_loop  goto 20
	bloque_estruct_ctrl  goto 85
	encabezado_if  goto 21


state 40
	if : encabezado_if rama_then . rama_else END_IF  (84)
	if : encabezado_if rama_then . END_IF  (85)

	ELSE  shift 86
	END_IF  shift 87
	.  error

	rama_else  goto 88


state 41
	lista_params_inv : ID .  (47)
	lista_params_inv : ID . separador_variables ID  (48)
	lista_params_inv : ID . separador_variables ID separador_variables ID  (49)
	lista_params_inv : ID . separador_variables ID separador_variables ID separador_variables lista_params_inv  (50)
	separador_variables : .  (22)

	','  shift 89
	ID  reduce 22
	')'  reduce 47

	separador_variables  goto 90


state 42
	invocacion : ID '(' ')' .  (45)

	.  reduce 45


state 43
	invocacion : ID '(' lista_params_inv . ')'  (46)

	')'  shift 91
	.  error


state 44
	asignacion : ID '=' error .  (52)

	.  reduce 52


state 45
	factor : ID .  (59)

	.  reduce 59


state 46
	factor : CTE_UINT .  (60)

	.  reduce 60


state 47
	factor : CTE_DOUBLE .  (61)

	.  reduce 61


state 48
	factor : '-' . factor  (62)

	ID  shift 45
	CTE_UINT  shift 46
	CTE_DOUBLE  shift 47
	'-'  shift 48
	.  error

	factor  goto 92


state 49
	asignacion : ID '=' expresion .  (51)
	expresion : expresion . '+' termino  (53)
	expresion : expresion . '-' termino  (54)

	'+'  shift 93
	'-'  shift 94
	$end  reduce 51
	ID  reduce 51
	UINT  reduce 51
	DOUBLE  reduce 51
	IF  reduce 51
	ELSE  reduce 51
	END_IF  reduce 51
	LOOP  reduce 51
	UNTIL  reduce 51
	OUT  reduce 51
	PROC  reduce 51
	';'  reduce 51
	'}'  reduce 51


state 50
	expresion : termino .  (55)
	termino : termino . '*' factor  (56)
	termino : termino . '/' factor  (57)

	'*'  shift 95
	'/'  shift 96
	$end  reduce 55
	ID  reduce 55
	COMP_MENOR_IGUAL  reduce 55
	COMP_MAYOR_IGUAL  reduce 55
	COMP_DISTINTO  reduce 55
	COMP_IGUAL  reduce 55
	UINT  reduce 55
	DOUBLE  reduce 55
	IF  reduce 55
	THEN  reduce 55
	ELSE  reduce 55
	END_IF  reduce 55
	LOOP  reduce 55
	UNTIL  reduce 55
	OUT  reduce 55
	PROC  reduce 55
	';'  reduce 55
	')'  reduce 55
	'}'  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	'<'  reduce 55
	'>'  reduce 55


state 51
	termino : factor .  (58)

	.  reduce 58


state 52
	condicion : '(' error . ')'  (77)

	')'  shift 97
	.  error


state 53
	comparador : COMP_MENOR_IGUAL .  (79)

	.  reduce 79


state 54
	comparador : COMP_MAYOR_IGUAL .  (78)

	.  reduce 78


state 55
	comparador : COMP_DISTINTO .  (83)

	.  reduce 83


state 56
	comparador : COMP_IGUAL .  (82)

	.  reduce 82


state 57
	comparador : '<' .  (80)

	.  reduce 80


state 58
	comparador : '>' .  (81)

	.  reduce 81


state 59
	expresion : expresion . '+' termino  (53)
	expresion : expresion . '-' termino  (54)
	condicion : '(' expresion . comparador expresion ')'  (73)
	condicion : '(' expresion . comparador expresion  (74)
	condicion : '(' expresion . comparador ')'  (76)

	COMP_MENOR_IGUAL  shift 53
	COMP_MAYOR_IGUAL  shift 54
	COMP_DISTINTO  shift 55
	COMP_IGUAL  shift 56
	'+'  shift 93
	'-'  shift 94
	'<'  shift 57
	'>'  shift 58
	.  error

	comparador  goto 98


state 60
	condicion : '(' comparador . expresion ')'  (75)

	ID  shift 45
	CTE_UINT  shift 46
	CTE_DOUBLE  shift 47
	'-'  shift 48
	.  error

	expresion  goto 99
	termino  goto 50
	factor  goto 51


state 61
	bloque_estruct_ctrl : '{' '}' .  (68)

	.  reduce 68


state 62
	bloque_sentencias_ejec : sentencia_ejec . fin_sentencia  (69)
	bloque_sentencias_ejec : sentencia_ejec . fin_sentencia bloque_sentencias_ejec  (70)
	fin_sentencia : .  (8)

	';'  shift 33
	ID  reduce 8
	IF  reduce 8
	LOOP  reduce 8
	OUT  reduce 8
	'}'  reduce 8

	fin_sentencia  goto 100


state 63
	bloque_estruct_ctrl : '{' bloque_sentencias_ejec . '}'  (67)

	'}'  shift 101
	.  error


state 64
	bloque_estruct_ctrl : sentencia_ejec fin_sentencia .  (66)

	.  reduce 66


state 65
	print : OUT '(' error . ')'  (94)

	')'  shift 102
	.  error


state 66
	imprimible : ID .  (98)

	.  reduce 98


state 67
	imprimible : CADENA .  (95)

	.  reduce 95


state 68
	imprimible : CTE_UINT .  (96)

	.  reduce 96


state 69
	imprimible : CTE_DOUBLE .  (97)

	.  reduce 97


state 70
	print : OUT '(' imprimible . ')'  (92)
	print : OUT '(' imprimible .  (93)

	')'  shift 103
	$end  reduce 93
	ID  reduce 93
	UINT  reduce 93
	DOUBLE  reduce 93
	IF  reduce 93
	ELSE  reduce 93
	END_IF  reduce 93
	LOOP  reduce 93
	UNTIL  reduce 93
	OUT  reduce 93
	PROC  reduce 93
	';'  reduce 93
	'}'  reduce 93


state 71
	lista_variables : ID ',' . lista_variables  (39)

	ID  shift 31
	.  error

	lista_variables  goto 104


state 72
	bloque_sentencias : tipo_sentencia fin_sentencia bloque_sentencias .  (5)

	.  reduce 5


state 73
	param_var : VAR . tipo_id ID  (26)
	param_var : VAR . ID  (27)
	param_var : VAR . tipo_id  (28)

	ID  shift 105
	UINT  shift 2
	DOUBLE  shift 3
	.  error

	tipo_id  goto 106


state 74
	params_proc : '(' ')' .  (15)

	.  reduce 15


state 75
	param_comun : tipo_id . ID  (29)
	param_comun : tipo_id .  (30)

	ID  shift 107
	error  reduce 30
	UINT  reduce 30
	DOUBLE  reduce 30
	VAR  reduce 30
	NI  reduce 30
	')'  reduce 30
	','  reduce 30
	'='  reduce 30


state 76
	params_proc : '(' lista_params_decl . ')'  (14)
	params_proc : '(' lista_params_decl .  (16)

	')'  shift 108
	error  reduce 16
	NI  reduce 16
	'='  reduce 16


state 77
	lista_params_decl : param .  (18)
	lista_params_decl : param . separador_variables param  (19)
	lista_params_decl : param . separador_variables param separador_variables param  (20)
	lista_params_decl : param . separador_variables param separador_variables param separador_variables lista_params_decl  (21)
	separador_variables : .  (22)

	','  shift 89
	error  reduce 18
	UINT  reduce 22
	DOUBLE  reduce 22
	VAR  reduce 22
	NI  reduce 18
	')'  reduce 18
	'='  reduce 18

	separador_variables  goto 109


state 78
	param : param_var .  (24)

	.  reduce 24


state 79
	param : param_comun .  (25)

	.  reduce 25


state 80
	ni_proc : error .  (35)

	.  reduce 35


state 81
	ni_proc : NI . '=' CTE_UINT  (31)
	ni_proc : NI . '='  (32)
	ni_proc : NI . CTE_UINT  (34)

	CTE_UINT  shift 110
	'='  shift 111
	.  error


state 82
	ni_proc : '=' . CTE_UINT  (33)

	CTE_UINT  shift 112
	.  error


state 83
	sentencia_decl : nombre_proc params_proc ni_proc . cuerpo_proc  (10)

	'{'  shift 113
	.  error

	cuerpo_proc  goto 114


state 84
	cuerpo_until : UNTIL condicion .  (71)

	.  reduce 71


state 85
	rama_then : THEN bloque_estruct_ctrl .  (88)

	.  reduce 88


state 86
	rama_else : ELSE . bloque_estruct_ctrl  (90)
	rama_else : ELSE .  (91)

	ID  shift 1
	IF  shift 4
	LOOP  shift 5
	OUT  shift 6
	'{'  shift 26
	END_IF  reduce 91

	sentencia_ejec  goto 27
	invocacion  goto 15
	asignacion  goto 16
	loop  goto 17
	if  goto 18
	print  goto 19
	cuerpo_loop  goto 20
	bloque_estruct_ctrl  goto 115
	encabezado_if  goto 21


state 87
	if : encabezado_if rama_then END_IF .  (85)

	.  reduce 85


state 88
	if : encabezado_if rama_then rama_else . END_IF  (84)

	END_IF  shift 116
	.  error


state 89
	separador_variables : ',' .  (23)

	.  reduce 23


state 90
	lista_params_inv : ID separador_variables . ID  (48)
	lista_params_inv : ID separador_variables . ID separador_variables ID  (49)
	lista_params_inv : ID separador_variables . ID separador_variables ID separador_variables lista_params_inv  (50)

	ID  shift 117
	.  error


state 91
	invocacion : ID '(' lista_params_inv ')' .  (46)

	.  reduce 46


state 92
	factor : '-' factor .  (62)

	.  reduce 62


state 93
	expresion : expresion '+' . termino  (53)

	ID  shift 45
	CTE_UINT  shift 46
	CTE_DOUBLE  shift 47
	'-'  shift 48
	.  error

	termino  goto 118
	factor  goto 51


state 94
	expresion : expresion '-' . termino  (54)

	ID  shift 45
	CTE_UINT  shift 46
	CTE_DOUBLE  shift 47
	'-'  shift 48
	.  error

	termino  goto 119
	factor  goto 51


state 95
	termino : termino '*' . factor  (56)

	ID  shift 45
	CTE_UINT  shift 46
	CTE_DOUBLE  shift 47
	'-'  shift 48
	.  error

	factor  goto 120


state 96
	termino : termino '/' . factor  (57)

	ID  shift 45
	CTE_UINT  shift 46
	CTE_DOUBLE  shift 47
	'-'  shift 48
	.  error

	factor  goto 121


state 97
	condicion : '(' error ')' .  (77)

	.  reduce 77


state 98
	condicion : '(' expresion comparador . expresion ')'  (73)
	condicion : '(' expresion comparador . expresion  (74)
	condicion : '(' expresion comparador . ')'  (76)

	ID  shift 45
	CTE_UINT  shift 46
	CTE_DOUBLE  shift 47
	')'  shift 122
	'-'  shift 48
	.  error

	expresion  goto 123
	termino  goto 50
	factor  goto 51


state 99
	expresion : expresion . '+' termino  (53)
	expresion : expresion . '-' termino  (54)
	condicion : '(' comparador expresion . ')'  (75)

	')'  shift 124
	'+'  shift 93
	'-'  shift 94
	.  error


state 100
	bloque_sentencias_ejec : sentencia_ejec fin_sentencia .  (69)
	bloque_sentencias_ejec : sentencia_ejec fin_sentencia . bloque_sentencias_ejec  (70)

	ID  shift 1
	IF  shift 4
	LOOP  shift 5
	OUT  shift 6
	'}'  reduce 69

	sentencia_ejec  goto 62
	invocacion  goto 15
	asignacion  goto 16
	loop  goto 17
	if  goto 18
	print  goto 19
	cuerpo_loop  goto 20
	bloque_sentencias_ejec  goto 125
	encabezado_if  goto 21


state 101
	bloque_estruct_ctrl : '{' bloque_sentencias_ejec '}' .  (67)

	.  reduce 67


state 102
	print : OUT '(' error ')' .  (94)

	.  reduce 94


state 103
	print : OUT '(' imprimible ')' .  (92)

	.  reduce 92


state 104
	lista_variables : ID ',' lista_variables .  (39)

	.  reduce 39


state 105
	param_var : VAR ID .  (27)

	.  reduce 27


state 106
	param_var : VAR tipo_id . ID  (26)
	param_var : VAR tipo_id .  (28)

	ID  shift 126
	error  reduce 28
	UINT  reduce 28
	DOUBLE  reduce 28
	VAR  reduce 28
	NI  reduce 28
	')'  reduce 28
	','  reduce 28
	'='  reduce 28


state 107
	param_comun : tipo_id ID .  (29)

	.  reduce 29


state 108
	params_proc : '(' lista_params_decl ')' .  (14)

	.  reduce 14


state 109
	lista_params_decl : param separador_variables . param  (19)
	lista_params_decl : param separador_variables . param separador_variables param  (20)
	lista_params_decl : param separador_variables . param separador_variables param separador_variables lista_params_decl  (21)

	UINT  shift 2
	DOUBLE  shift 3
	VAR  shift 73
	.  error

	tipo_id  goto 75
	param  goto 127
	param_var  goto 78
	param_comun  goto 79


state 110
	ni_proc : NI CTE_UINT .  (34)

	.  reduce 34


state 111
	ni_proc : NI '=' . CTE_UINT  (31)
	ni_proc : NI '=' .  (32)

	CTE_UINT  shift 128
	'{'  reduce 32


state 112
	ni_proc : '=' CTE_UINT .  (33)

	.  reduce 33


state 113
	cuerpo_proc : '{' . bloque_sentencias '}'  (36)
	cuerpo_proc : '{' . '}'  (37)

	ID  shift 1
	UINT  shift 2
	DOUBLE  shift 3
	IF  shift 4
	LOOP  shift 5
	OUT  shift 6
	PROC  shift 7
	'}'  shift 129
	.  error

	bloque_sentencias  goto 130
	tipo_id  goto 10
	tipo_sentencia  goto 11
	sentencia_decl  goto 12
	sentencia_ejec  goto 13
	nombre_proc  goto 14
	invocacion  goto 15
	asignacion  goto 16
	loop  goto 17
	if  goto 18
	print  goto 19
	cuerpo_loop  goto 20
	encabezado_if  goto 21


state 114
	sentencia_decl : nombre_proc params_proc ni_proc cuerpo_proc .  (10)

	.  reduce 10


state 115
	rama_else : ELSE bloque_estruct_ctrl .  (90)

	.  reduce 90


state 116
	if : encabezado_if rama_then rama_else END_IF .  (84)

	.  reduce 84


state 117
	lista_params_inv : ID separador_variables ID .  (48)
	lista_params_inv : ID separador_variables ID . separador_variables ID  (49)
	lista_params_inv : ID separador_variables ID . separador_variables ID separador_variables lista_params_inv  (50)
	separador_variables : .  (22)

	','  shift 89
	ID  reduce 22
	')'  reduce 48

	separador_variables  goto 131


state 118
	expresion : expresion '+' termino .  (53)
	termino : termino . '*' factor  (56)
	termino : termino . '/' factor  (57)

	'*'  shift 95
	'/'  shift 96
	$end  reduce 53
	ID  reduce 53
	COMP_MENOR_IGUAL  reduce 53
	COMP_MAYOR_IGUAL  reduce 53
	COMP_DISTINTO  reduce 53
	COMP_IGUAL  reduce 53
	UINT  reduce 53
	DOUBLE  reduce 53
	IF  reduce 53
	THEN  reduce 53
	ELSE  reduce 53
	END_IF  reduce 53
	LOOP  reduce 53
	UNTIL  reduce 53
	OUT  reduce 53
	PROC  reduce 53
	';'  reduce 53
	')'  reduce 53
	'}'  reduce 53
	'+'  reduce 53
	'-'  reduce 53
	'<'  reduce 53
	'>'  reduce 53


state 119
	expresion : expresion '-' termino .  (54)
	termino : termino . '*' factor  (56)
	termino : termino . '/' factor  (57)

	'*'  shift 95
	'/'  shift 96
	$end  reduce 54
	ID  reduce 54
	COMP_MENOR_IGUAL  reduce 54
	COMP_MAYOR_IGUAL  reduce 54
	COMP_DISTINTO  reduce 54
	COMP_IGUAL  reduce 54
	UINT  reduce 54
	DOUBLE  reduce 54
	IF  reduce 54
	THEN  reduce 54
	ELSE  reduce 54
	END_IF  reduce 54
	LOOP  reduce 54
	UNTIL  reduce 54
	OUT  reduce 54
	PROC  reduce 54
	';'  reduce 54
	')'  reduce 54
	'}'  reduce 54
	'+'  reduce 54
	'-'  reduce 54
	'<'  reduce 54
	'>'  reduce 54


state 120
	termino : termino '*' factor .  (56)

	.  reduce 56


state 121
	termino : termino '/' factor .  (57)

	.  reduce 57


state 122
	condicion : '(' expresion comparador ')' .  (76)

	.  reduce 76


state 123
	expresion : expresion . '+' termino  (53)
	expresion : expresion . '-' termino  (54)
	condicion : '(' expresion comparador expresion . ')'  (73)
	condicion : '(' expresion comparador expresion .  (74)

	')'  shift 132
	'+'  shift 93
	'-'  shift 94
	$end  reduce 74
	ID  reduce 74
	UINT  reduce 74
	DOUBLE  reduce 74
	IF  reduce 74
	THEN  reduce 74
	ELSE  reduce 74
	END_IF  reduce 74
	LOOP  reduce 74
	UNTIL  reduce 74
	OUT  reduce 74
	PROC  reduce 74
	';'  reduce 74
	'}'  reduce 74


state 124
	condicion : '(' comparador expresion ')' .  (75)

	.  reduce 75


state 125
	bloque_sentencias_ejec : sentencia_ejec fin_sentencia bloque_sentencias_ejec .  (70)

	.  reduce 70


state 126
	param_var : VAR tipo_id ID .  (26)

	.  reduce 26


state 127
	lista_params_decl : param separador_variables param .  (19)
	lista_params_decl : param separador_variables param . separador_variables param  (20)
	lista_params_decl : param separador_variables param . separador_variables param separador_variables lista_params_decl  (21)
	separador_variables : .  (22)

	','  shift 89
	error  reduce 19
	UINT  reduce 22
	DOUBLE  reduce 22
	VAR  reduce 22
	NI  reduce 19
	')'  reduce 19
	'='  reduce 19

	separador_variables  goto 133


state 128
	ni_proc : NI '=' CTE_UINT .  (31)

	.  reduce 31


state 129
	cuerpo_proc : '{' '}' .  (37)

	.  reduce 37


state 130
	cuerpo_proc : '{' bloque_sentencias . '}'  (36)

	'}'  shift 134
	.  error


state 131
	lista_params_inv : ID separador_variables ID separador_variables . ID  (49)
	lista_params_inv : ID separador_variables ID separador_variables . ID separador_variables lista_params_inv  (50)

	ID  shift 135
	.  error


state 132
	condicion : '(' expresion comparador expresion ')' .  (73)

	.  reduce 73


state 133
	lista_params_decl : param separador_variables param separador_variables . param  (20)
	lista_params_decl : param separador_variables param separador_variables . param separador_variables lista_params_decl  (21)

	UINT  shift 2
	DOUBLE  shift 3
	VAR  shift 73
	.  error

	tipo_id  goto 75
	param  goto 136
	param_var  goto 78
	param_comun  goto 79


state 134
	cuerpo_proc : '{' bloque_sentencias '}' .  (36)

	.  reduce 36


state 135
	lista_params_inv : ID separador_variables ID separador_variables ID .  (49)
	lista_params_inv : ID separador_variables ID separador_variables ID . separador_variables lista_params_inv  (50)
	separador_variables : .  (22)

	','  shift 89
	ID  reduce 22
	')'  reduce 49

	separador_variables  goto 137


state 136
	lista_params_decl : param separador_variables param separador_variables param .  (20)
	lista_params_decl : param separador_variables param separador_variables param . separador_variables lista_params_decl  (21)
	separador_variables : .  (22)

	','  shift 89
	error  reduce 20
	UINT  reduce 22
	DOUBLE  reduce 22
	VAR  reduce 22
	NI  reduce 20
	')'  reduce 20
	'='  reduce 20

	separador_variables  goto 138


state 137
	lista_params_inv : ID separador_variables ID separador_variables ID separador_variables . lista_params_inv  (50)

	ID  shift 41
	.  error

	lista_params_inv  goto 139


state 138
	lista_params_decl : param separador_variables param separador_variables param separador_variables . lista_params_decl  (21)

	UINT  shift 2
	DOUBLE  shift 3
	VAR  shift 73
	.  error

	tipo_id  goto 75
	lista_params_decl  goto 140
	param  goto 77
	param_var  goto 78
	param_comun  goto 79


state 139
	lista_params_inv : ID separador_variables ID separador_variables ID separador_variables lista_params_inv .  (50)

	.  reduce 50


state 140
	lista_params_decl : param separador_variables param separador_variables param separador_variables lista_params_decl .  (21)

	.  reduce 21


35 terminals, 37 nonterminals
99 grammar rules, 141 states
